--- a/src/pages/cadastro/editar-cadastro.html
+++ b/src/pages/cadastro/editar-cadastro.html
@@ -69,8 +69,8 @@
       </div>
       <div class="formulario_acoes">
         <button class="btn_primario">Salvar</button>
-        <button class="btn_secundario warning">Excluir conta</button>
-        <button class="btn_secundario warning">Cancelar plano</button>
+        <button class="btn_terciario">Cancelar plano</button>
+        <button class="btn_quartenario">Excluir conta</button>
 
       </div>
     </form>
