--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -47,6 +47,10 @@
       </div>
       <img id="icone1" src="../../assets/icons/home3.svg" alt="icone 1">
       <img id="icone2" src="../../assets/icons/home6.svg" alt="icone 2">
+      <img id="icone3" src="../../assets/icons/home4.svg" alt="icone 3">
+      <img id="icone4" src="../../assets/icons/home1.svg" alt="icone 4">
+      <img id="icone5" src="../../assets/icons/home2.svg" alt="icone 5">
+
     </div>
 
     <div id="card_container">
