--- a/src/pages/admin/admin.html
+++ b/src/pages/admin/admin.html
@@ -7,7 +7,7 @@
     <title>Admin - Smart Locker Solutions</title>
     <link rel="stylesheet" href="../../styles/reset.css" />
     <link rel="stylesheet" href="../../styles/global.css" />
-    <link rel="stylesheet" href="../../styles/dashboard.css">
+    <link rel="stylesheet" href="../../styles/admin.css">
 </head>
 
 <body>
