--- a/src/pages/admin/admin.html
+++ b/src/pages/admin/admin.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <div id="logo"><img src="../../assets/logo1.png" alt="Logo" /></div>
+        <div id="logo"><img src="../../assets/logo3.png" alt="Logo" /></div>
         <nav id="main_nav">
             <a href="../index/index.html">Home</a>
             <a href="../produtos/produtos.html">Nossos Produtos</a>
@@ -152,6 +152,7 @@
                 <div class="acoes">
                     <button class="btn_primario">Salvar</button>
                     <button class="btn_terciario">Excluir</button>
+                    <button class="btn_quartenario">Cancelar</button> 
                 </div>
             </form>
         </dialog>
@@ -178,6 +179,7 @@
                 <div class="acoes">
                     <button class="btn_primario">Salvar</button>
                     <button class="btn_terciario">Excluir</button>
+                    <button class="btn_quartenario">Cancelar</button> 
                 </div>
             </form>
         </dialog>
