atualizacao title e logo

--- a/src/pages/cadastro/cadastro.html
+++ b/src/pages/cadastro/cadastro.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cadastro</title>
+  <title>Cadastro - Smart Locker Solutions</title>
   <link rel="stylesheet" href="../../styles/reset.css" />
   <link rel="stylesheet" href="../../styles/global.css" />
   <link rel="stylesheet" href="../../styles/cadastro.css" />
@@ -13,7 +13,7 @@
 <body>
   <div id="container">
     <header>
-      <div id="logo"><img src="../../assets/logo1.png" alt="Logo" /></div>
+      <div id="logo"><img src="../../assets/logo3.png" alt="Logo" /></div>
       <nav id="main_nav">
         <a href="../index/index.html">Home</a>
         <a href="../produtos/produtos.html">Nossos Produtos</a>
