atualizacao botao header e estilizacao

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -12,11 +12,11 @@
 
 <body>
   <header>
-    <div id="logo"><img src="../../assets/logo1.png" alt="Logo" /></div>
+    <div id="logo"><img src="../../assets/logo3.png" alt="Logo" /></div>
     <nav id="main_nav">
-      <a href="../index/index.html">Home</a>
       <a href="../produtos/produtos.html">Nossos Produtos</a>
       <a href="../sobre/sobre.html">Quem Somos</a>
+      <a href="../cadastro/cadastro.html">Cadastre-se</a>
       <button class="btn_secundario">Login</button>
       <select id="dropdown-menu">
         <option value="sair">Nome</option>
