--- a/src/pages/produtos/escolher-produtos.html
+++ b/src/pages/produtos/escolher-produtos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Escolher produtos</title>
+  <title>Escolher produtos - Smart Locker Solutions</title>
   <link rel="stylesheet" href="../../styles/reset.css" />
   <link rel="stylesheet" href="../../styles/global.css" />
   <link rel="stylesheet" href="../../styles/escolher-produtos.css">
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <div id="logo"><img src="../../assets/logo1.png" alt="Logo" /></div>
+    <div id="logo"><img src="../../assets/logo3.png" alt="Logo" /></div>
     <nav id="main_nav">
       <a href="../index/index.html">Home</a>
       <a href="../produtos/produtos.html">Nossos Produtos</a>
