atualizao imagem, botão e titulo

--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nossos produtos</title>
+  <title>Nossos produtos - Smart Locker Solutions</title>
   <link rel="stylesheet" href="../../styles/reset.css" />
   <link rel="stylesheet" href="../../styles/global.css" />
   <link rel="stylesheet" href="../../styles/produtos.css" />
@@ -12,11 +12,11 @@
 
 <body>
   <header>
-    <div id="logo"><img src="../../assets/logo1.png" alt="Logo" /></div>
+    <div id="logo"><img src="../../assets/logo3.png" alt="Logo" /></div>
     <nav id="main_nav">
       <a href="../index/index.html">Home</a>
-      <a href="../produtos/produtos.html">Nossos Produtos</a>
       <a href="../sobre/sobre.html">Quem Somos</a>
+      <a href="../cadastro/cadastro.html">Cadastre-se</a>
       <button class="btn_secundario">Login</button>
       <select id="dropdown-menu">
         <option value="sair">Nome</option>
@@ -30,7 +30,7 @@
     <h1 id="titulo">Possuímos lockers com tamanhos padrões ou personalizados</h1>
 
     <div id="locker_image">
-      <img src="../../assets/locker-produtos.png" alt="icone exemplo locker">
+      <img src="../../assets/locker-produtos1.png" alt="icone exemplo locker">
     </div>
 
     <div id="card_container">
@@ -74,7 +74,7 @@
         </div>
       </div>
     </div>
-    <h2 id="subtitulo">Tem interesse em personalizar seu locker? Entre em contato no link abaixo</h4>
+    <h2 id="subtitulo">Entre em contato no link abaixo para escolher ou personalizar seu locker!</h4>
       <button class="btn_primario">Tenho interesse</button>
       </div>
   </main>
