--- a/src/pages/sobre/sobre.html
+++ b/src/pages/sobre/sobre.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Template - Smart Locker Solutions</title>
+  <title>Quem somos - Smart Locker Solutions</title>
   <link rel="stylesheet" href="../../styles/reset.css" />
   <link rel="stylesheet" href="../../styles/global.css" />
   <link rel="stylesheet" href="../../styles/sobre.css" />
@@ -12,11 +12,11 @@
 
 <body>
   <header>
-    <div id="logo"><img src="../../assets/logo1.png" alt="Logo" /></div>
+    <div id="logo"><img src="../../assets/logo3.png" alt="Logo" /></div>
     <nav id="main_nav">
       <a href="../index/index.html">Home</a>
       <a href="../produtos/produtos.html">Nossos Produtos</a>
-      <a href="../sobre/sobre.html">Quem Somos</a>
+      <a href="../cadastro/cadastro.html">Cadastre-se</a>
       <button class="btn_secundario">Login</button>
       <select id="dropdown-menu">
         <option value="sair">Nome</option>
@@ -28,13 +28,18 @@
   </header>
 
   <main id="content">
-    <div id="foto_armario">
-      <img src="../../assets/imagem_quem_somos.png" alt="foto armario loker" />
-    </div>
+  <div id="hero">
+  <img id="icone6" src="../../assets/icons/QuemSomos.svg" alt="icone 6">
+  <img id="icone7" src="../../assets/icons/QuemSomos3.svg" alt="icone 7">
+  <img id="icone8" src="../../assets/icons/QuemSomos2.svg" alt="icone 8">
+  </div>
+
+
+</div>
 
     <div id="container">
-      <div class="artigo quemsomos">
-        <h1 class="titulo ">Quem Somos</h1>
+      <div class="quemsomos">
+        <h2 class="subtitulo">Quem Somos</h2>
         <p>A Smart Lokers Solutions é uma empresa especializada em soluções de
           armazenamento inteligentes, oferecendo lockers com design moderno,
           segurança avançada e conveniência. Com uma equipe dedicada,
@@ -42,7 +47,7 @@
           documentos importantes ou mercadorias, garantindo uma gestão
           eficiente e segura do espaço de armazenamento.</p>
       </div>
-      <div class="artigo missao">
+      <div class="missao">
         <h2 class="subtitulo">Nossa Missão</h2>
         <p>Fornecer lockers seguros e convenientes, facilitando o
           armazenamento e retirada de pertences. Garantimos a comodidade e
@@ -51,16 +56,16 @@
           soluções de armazenamento confiáveis.</p>
       </div>
 
-      <div class="artigo visao">
+      <div class="visao">
         <h2 class="subtitulo">Nossa Visão</h2>
         <p>A empresa de lockers busca tornar a vida dos clientes mais
           conveniente e segura, oferecendo espaços de armazenamento acessíveis
           e confiáveis. Nossa visão é ser a escolha preferida dos clientes,
           proporcionando uma experiência simples e intuitiva, apoiada pela
-          inovação e excelência no atendimento ao cliente</p>
+          inovação e excelência no atendimento ao cliente.</p>
       </div>
 
-      <div class="artigo valores">
+      <div class="valores">
         <h2 class="subtitulo" valores>Nossos Valores</h2>
         <p>• Integridade</p>
         <p>• Qualidade</p>
