ação botão iniciais

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -17,7 +17,8 @@
       <a href="../produtos/produtos.html">Nossos Produtos</a>
       <a href="../sobre/sobre.html">Quem Somos</a>
       <a href="../cadastro/cadastro.html">Cadastre-se</a>
-      <button class="btn_secundario">Login</button>
+      <button class="btn_secundario" onclick="window.location.href = '/src/pages/login/login.html'">Login</button>
+      
       <select id="dropdown-menu">
         <option value="sair">Nome</option>
         <option value="admin">Editar perfil</option>
@@ -43,7 +44,7 @@
           <p>Evita filas</p>
         </div>
 
-        <button class="btn_primario">Cadastre-se</button>
+        <button class="btn_primario" onclick="window.location.href = '/src/pages/cadastro/cadastro.html'">Cadastre-se</button>
       </div>
       <img id="icone1" src="../../assets/icons/home3.svg" alt="icone 1">
       <img id="icone2" src="../../assets/icons/home6.svg" alt="icone 2">
@@ -75,6 +76,9 @@
   </main>
 
   <footer>&copy caçadores de código 2023</footer>
+
+  <script src="features\teste.js"></script>
 </body>
+
 
 </html>
