--- a/src/pages/admin/admin.html
+++ b/src/pages/admin/admin.html
@@ -20,7 +20,8 @@
             <button class="btn_secundario">Login</button>
             <select id="dropdown-menu">
                 <option value="sair">Nome</option>
-                <option value="admin">Editar perfil</option>
+                <option value="admin">Clientes</option>
+                <option value="admin">Produtos</option>
                 <option value="sair">Sair</option>
             </select>
         </nav>
