--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,7 +14,7 @@
 
   <main id="content">
 
-    <div class="botao_home_login"><button class="btn_home_login">Home</button></div>
+    <div class="botao_home_login"><button  class="btn_home_login" onclick="window.location.href = '/src/pages/index/index.html'">Home</button></div>
     
     <div class="login_principal">
 
@@ -43,7 +43,7 @@
               <h1 class="login_h1">Seja bem-vindo!</h1>
               <h3 class="login_h3">Faça o seu cadastro e começe agora mesmo</h3>
             </div>
-            <button class="btn_primario">Cadastre-se</button>
+            <button class="btn_primario" onclick="window.location.href = '/src/pages/cadastro/cadastro.html'">Cadastre-se</button>
       </div>
   </main>
   <footer>&copy caçadores de código 2023</footer>
