html movido para a mesma pasta

--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin - Smart Locker Solutions</title>
-    <link rel="stylesheet" href="../../styles/reset.css" />
-    <link rel="stylesheet" href="../../styles/global.css" />
-    <link rel="stylesheet" href="../../styles/admin.css">
+    <link rel="stylesheet" href="../styles/reset.css" />
+    <link rel="stylesheet" href="../styles/global.css" />
+    <link rel="stylesheet" href="../styles/admin.css">
 </head>
 
 <body>
     <header>
-        <div id="logo"><img src="../../assets/logo3.png" alt="Logo" /></div>
+        <div id="logo"><img src="../assets/logo3.png" alt="Logo" /></div>
         <nav id="main_nav">
-            <a href="../index/index.html">Home</a>
-            <a href="../produtos/produtos.html">Nossos Produtos</a>
-            <a href="../sobre/sobre.html">Quem Somos</a>
+            <a href="./index.html">Home</a>
+            <a href="./produtos.html">Nossos Produtos</a>
+            <a href="./sobre.html">Quem Somos</a>
             <button class="btn_secundario">Login</button>
             <select id="dropdown-menu">
                 <option value="sair">Nome</option>
@@ -153,7 +153,7 @@
                 <div class="acoes">
                     <button class="btn_primario">Salvar</button>
                     <button class="btn_terciario">Excluir</button>
-                    <button class="btn_quartenario">Cancelar</button> 
+                    <button class="btn_quartenario">Cancelar</button>
                 </div>
             </form>
         </dialog>
@@ -180,7 +180,7 @@
                 <div class="acoes">
                     <button class="btn_primario">Salvar</button>
                     <button class="btn_terciario">Excluir</button>
-                    <button class="btn_quartenario">Cancelar</button> 
+                    <button class="btn_quartenario">Cancelar</button>
                 </div>
             </form>
         </dialog>
