--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -17,7 +17,7 @@
             <a href="./index.html">Home</a>
             <a href="./produtos.html">Nossos Produtos</a>
             <a href="./cadastro.html">Cadastre-se</a>
-            <button class="btn_secundario">Login</button>
+            <a href="./login.html" class="btn_secundario">Login</a>
             <select id="dropdown-menu">
                 <option value="sair">Nome</option>
                 <option value="admin">Editar perfil</option>
