--- a/src/pages/editar-cadastro.html
+++ b/src/pages/editar-cadastro.html
@@ -15,16 +15,14 @@
     <header>
         <div id="logo"><img src="../assets/logo3.png" alt="Logo" /></div>
         <nav id="main_nav">
-            <a href="./index/index.html">Home</a>
-            <a href="./produtos/produtos.html">Nossos Produtos</a>
-            <a href="./sobre/sobre.html">Quem Somos</a>
-            <button class="btn_secundario">Login</button>
-            <select id="dropdown-menu">
-                <option value="sair">Nome</option>
-                <option value="admin">Editar perfil</option>
-                <option value="sair">Sair</option>
-            </select>
+            <a href="./index.html">Home</a>
+            <a href="./produtos.html">Nossos Produtos</a>
+            <a href="./sobre.html">Quem Somos</a>
+
+            <a id="btn_login" href="./login.html" class="btn_secundario">Login</a>
+            <div id="login_menu"></div>
         </nav>
+
 
     </header>
     <main id="content">
