--- a/src/pages/produtos.html
+++ b/src/pages/produtos.html
@@ -17,7 +17,7 @@
             <a href="./index.html">Home</a>
             <a href="./sobre.html">Quem Somos</a>
             <a href="./cadastro.html">Cadastre-se</a>
-            <button class="btn_secundario">Login</button>
+            <a href="./login.html" class="btn_secundario">Login</a>
             <select id="dropdown-menu">
                 <option value="sair">Nome</option>
                 <option value="admin">Editar perfil</option>
@@ -28,7 +28,6 @@
 
     <main id="content">
         <h1 id="titulo">Possuímos lockers com tamanhos padrões ou personalizados</h1>
-
         <div id="locker_image">
             <img src="../assets/locker-produtos1.png" alt="icone exemplo locker">
         </div>
@@ -74,9 +73,11 @@
                 </div>
             </div>
         </div>
-        <h2 id="subtitulo">Entre em contato no link abaixo para escolher ou personalizar seu locker!</h4>
-            <button class="btn_primario">Tenho interesse</button>
-            </div>
+        <div>
+            <h2 id="subtitulo">Entre em contato no link abaixo para escolher ou personalizar seu locker!</h2>
+            <a href="./login.html" class="btn_primario">Tenho interesse</a>
+        </div>
+
     </main>
     <footer>&copy caçadores de código 2023</footer>
 
