--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -19,9 +19,11 @@
             <a href="./sobre.html">Quem Somos</a>
 
             <a id="btn_login" href="./login.html" class="btn_secundario">Login</a>
-            <button id="dropdown-menu">
-                <img id="dropdown-menu-image" src="../assets/menu.svg" alt="drop down menu" width="30px">
-            </button>
+            <select id="dropdown-menu">
+                <option value="sair">Nome</option>
+                <option value="admin">Editar perfil</option>
+                <option value="sair">Sair</option>
+            </select>
 
 
         </nav>
