--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -19,8 +19,11 @@
                 <a href="./produtos.html">Nossos Produtos</a>
                 <a href="./sobre.html">Quem Somos</a>
 
-                <a id="btn_login" href="./login.html" class="btn_secundario">Login</a>
-                <div id="login_menu"></div>
+                <select id="dropdown-menu">
+                    <option value="sair">Nome</option>
+                    <option value="admin">Editar perfil</option>
+                    <option value="sair">Sair</option>
+                </select>
             </nav>
 
         </header>
