--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -18,7 +18,7 @@
                 <a href="./index.html">Home</a>
                 <a href="./produtos.html">Nossos Produtos</a>
                 <a href="./sobre.html">Quem Somos</a>
-
+                <a class="btn_secundario" href='./login.html'>Login</a>
                 <select id="dropdown-menu">
                     <option value="sair">Nome</option>
                     <option value="admin">Editar perfil</option>
