--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -40,7 +40,7 @@
 
         <div id="produtos" class="dashboard-container">
             <h1>Meus Produtos</h1>
-            <button class="btn_primario">Cadastrar Novo Produto</button>
+            <button id="new_product_btn" class="btn_primario">Cadastrar Novo Produto</button>
             <div id="container_produtos">
             </div>
 
